--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
               </p>
               A solution for the time dependent equation, for time independent Hamiltonian is given as
               <p>
-              \({\displaystyle \psi(x,t) = \psi(x) e^{i E t / \hbar}}\)
+              \({\displaystyle \psi(x,t) = \psi(x) e^{-i E t / \hbar}}\)
               </p>
               which for many energy levels generalizes to the summation
               <p>
-              \({\displaystyle \psi(x,t) = \sum_j \psi_j(x) e^{i E_j t / \hbar}}\)
+              \({\displaystyle \psi(x,t) = \sum_j \psi_j(x) e^{-i E_j t / \hbar}}\)
               </p>
               </p>
        </div>
